--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CTD Teams</title>
+    <title>About My Self</title>
 </head>
 <body>
-    
+    <h1> Rahul Ashokrao Munde</h1>
+    <h2>About</h2>
+    <p>Hey hi, Guy's My Name rahul i did my Grauation in Computer Science Engineering,
+        Currently i'm working as Software Engineer since last 2.2 Year's as Front-end Developer or Web/UI Developer
+    </p>
+    <h2>Experience</h2>
+    <ul>
+        <li>BOOKIT</li>
+        <li>MedicalFiy</li>
+    </ul>
+    <h2>Connect</h2>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/rahul-munde/">LinkedIn</a></li>
+        <li><a href="https://github.com/rahul-munde">github</a></li>
+        <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">email</a></li>
+    </ul>
 </body>
 </html>
