--- a/index.html
+++ b/index.html
@@ -2,6 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Single Page Web">
+    <link rel="stylesheet" href="./style.css">
+    <title>About Me</title>
+</head>
+<body>
+    <h1> Rahul Ashokrao Munde</h1>
+    <section id="About Me">
+    <h2>About</h2>
+    <p>Hey hi, Guy's My Name rahul i did my Grauation in Computer Science Engineering,<br>
+        Currently i'm working as Software Engineer since last 2.2 Year's as Front-end Developer or Web/UI Developer
+    </p>
+    </section>
+    <img src="./rahul.jpg" alt="my-pic" width="80" height="80">
+    <section id="My Experience">
+    <h2>Experience</h2>
+    <ul>
+        <li>BOOKIT</li>
+        <li>IPX</li>
+        <li>RAM</li>
+    </ul>
+    </section>
+    <section id="Connect with me">
+    <h2>Connect</h2>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/rahul-munde/">LinkedIn</a></li>
+        <li><a href="https://github.com/rahul-munde">github</a></li>
+        <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">email</a></li>
+    </ul>
+    </section>
+</body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About My Self</title>
 </head>
@@ -23,4 +59,4 @@
         <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">email</a></li>
     </ul>
 </body>
-</html>
+</html> -->
