--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="description" content="Single Page Web">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Playwrite+DK+Loopet:wght@100..400&display=swap" rel="stylesheet">
     <title>About Me</title>
 </head>
 <body>
@@ -41,3 +45,5 @@
     </section>
 </body>
 </html>
+
+
