formatted styles added

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Single Page Web">
-    <link rel="stylesheet" href="./style.css">
+    <meta name="description" content="Single Page Website">
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -11,23 +10,30 @@
     <title>About Me</title>
 </head>
 <body>
-    <h1> Rahul Ashokrao Munde</h1>
-    <section id="nav-box">
-        <ul>
-            <li><a href="about"></a>About</li>
-            <li><a href="experience"></a>Experience</li>
-            <li><a href="Connect"></a>Connect</li>
-        </ul>
 
-    </section>
-    <section id="About Me">
+    <h1> Rahul Ashokrao Munde</h1>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#About">About</a></li>
+                <li><a href="#Experience">Experience</a></li>
+                <li><a href="#Skills"></a>Skills</li>
+                <li><a href="#Projects"></a>Projects</li>
+                <li><a href="#Contact">Contact</a></li>
+                <li style="float:right"><a class="active" href="#About">About</a>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="About">
     <h2>About</h2>
     <p>Hey hi, Guy's My Name rahul i did my Grauation in Computer Science Engineering,<br>
         Currently i'm working as Software Engineer since last 2.2 Year's as Front-end Developer or Web/UI Developer
     </p>
-    </section>
     <img src="./rahul.jpg" alt="my-pic" width="80" height="80">
-    <section id="My Experience">
+    </section>
+
+    <section id="Experience">
     <h2>Experience</h2>
     <ul>
         <li>BOOKIT</li>
@@ -35,7 +41,25 @@
         <li>RAM</li>
     </ul>
     </section>
-    <section id="Connect with me">
+
+    <section id="Skills">
+    <h2>Skills</h2>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JS</li>
+    </ul>
+    </section>
+
+    
+    <section id="Projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>BOOKIT</li>
+        </ul>
+    </section>
+
+    <section id="Contact">
     <h2>Connect</h2>
     <ul>
         <li><a href="https://www.linkedin.com/in/rahul-munde/">LinkedIn</a></li>
@@ -45,5 +69,6 @@
     </section>
 </body>
 </html>
+
 
 
