--- a/index.html
+++ b/index.html
@@ -12,37 +12,40 @@
 </head>
 <body>
     <h1> Rahul Ashokrao Munde</h1>
-    <section id="nav-box">
+    <div class="navbox">
         <ul>
             <li><a href="about"></a>About</li>
             <li><a href="experience"></a>Experience</li>
             <li><a href="Connect"></a>Connect</li>
         </ul>
-
-    </section>
-    <section id="About Me">
+    </div>
+    <div class="About Me">
     <h2>About</h2>
     <p>Hey hi, Guy's My Name rahul i did my Grauation in Computer Science Engineering,<br>
         Currently i'm working as Software Engineer since last 2.2 Year's as Front-end Developer or Web/UI Developer
     </p>
-    </section>
     <img src="./rahul.jpg" alt="my-pic" width="80" height="80">
-    <section id="My Experience">
-    <h2>Experience</h2>
-    <ul>
-        <li>BOOKIT</li>
-        <li>IPX</li>
-        <li>RAM</li>
-    </ul>
-    </section>
-    <section id="Connect with me">
+    <h2>experience</h2>
+    <div class="container">
+    <div class="grid-at">
+    <div class="oth">
+    <div>Front-end Developer</div>
+    <div>Full Stack Developer</div>
+    <div>Assoicate Developer</div>
+    <div>Front-end Developer</div>
+    <div>Junior Developer</div>
+    </div>
+    </div>
+    </div>
+  
+    <div class="Connect">
     <h2>Connect</h2>
     <ul>
         <li><a href="https://www.linkedin.com/in/rahul-munde/">LinkedIn</a></li>
         <li><a href="https://github.com/rahul-munde">github</a></li>
         <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">email</a></li>
     </ul>
-    </section>
+    </div>
 </body>
 </html>
 
