--- a/index.html
+++ b/index.html
@@ -1,74 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Single Page Website">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Playwrite+DK+Loopet:wght@100..400&display=swap" rel="stylesheet">
-    <title>About Me</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <!-- <script src="./javascript/script.js" defer></script> -->
+    <title>My Resume</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>rahul munde</h1>
+        <div class="contact-info">
+          <p>Email: rahul.nuu@example.com | Phone: (123) 456-7890</p>
+          <p>Address: 123 Main St, Anytown, USA</p>
+        </div>
+      </div>
 
-    <h1> Rahul Ashokrao Munde</h1>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#About">About</a></li>
-                <li><a href="#Experience">Experience</a></li>
-                <li><a href="#Skills"></a>Skills</li>
-                <li><a href="#Projects"></a>Projects</li>
-                <li><a href="#Contact">Contact</a></li>
-                <li style="float:right"><a class="active" href="#About">About</a>
-            </ul>
-        </nav>
-    </header>
+      <div class="section">
+        <h2>Summary</h2>
+        <p>
+          A highly motivated and skilled web developer with experience in
+          creating dynamic and responsive websites. Proficient in HTML, CSS, and
+          JavaScript. Eager to contribute to team success through hard work,
+          attention to detail, and excellent organizational skills.
+        </p>
+      </div>
 
-    <section id="About">
-    <h2>About</h2>
-    <p>Hey hi, Guy's My Name rahul i did my Grauation in Computer Science Engineering,<br>
-        Currently i'm working as Software Engineer since last 2.2 Year's as Front-end Developer or Web/UI Developer
-    </p>
-    <img src="./rahul.jpg" alt="my-pic" width="80" height="80">
-    </section>
-
-    <section id="Experience">
-    <h2>Experience</h2>
-    <ul>
-        <li>BOOKIT</li>
-        <li>IPX</li>
-        <li>RAM</li>
-    </ul>
-    </section>
-
-    <section id="Skills">
-    <h2>Skills</h2>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JS</li>
-    </ul>
-    </section>
-
-    
-    <section id="Projects">
-        <h2>Projects</h2>
+      <div class="section">
+        <h2>Experience</h2>
         <ul>
-            <li>BOOKIT</li>
+          <li>
+            <h3>Web Developer Intern</h3>
+            <p>CTD Company | Jan 2024 - Present</p>
+            <p>
+              Developed and maintained multiple websites, ensuring cross-browser
+              compatibility and mobile responsiveness. Collaborated with
+              designers and content creators to build user-friendly websites.
+            </p>
+          </li>
+          <li>
+            <h3>Front-End Developer Intern</h3>
+            <p>Indium Software Company | Jun 2023 - Dec 2024</p>
+            <p>
+              Assisted in the development of the company's e-commerce platform.
+              Implemented new features and fixed bugs using JavaScript and CSS.
+              Gained hands-on experience with version control systems.
+            </p>
+          </li>
         </ul>
-    </section>
+      </div>
 
-    <section id="Contact">
-    <h2>Connect</h2>
-    <ul>
-        <li><a href="https://www.linkedin.com/in/rahul-munde/">LinkedIn</a></li>
-        <li><a href="https://github.com/rahul-munde">github</a></li>
-        <li><a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox">email</a></li>
-    </ul>
-    </section>
-</body>
+      <div class="section">
+        <h2>Education</h2>
+        <ul class="education">
+          <li>
+            <strong>Bachelor of Science in Computer Science</strong> -
+            University of Pune,lndia, 2022
+          </li>
+        </ul>
+      </div>
+
+      <div class="section">
+        <h2>Skills</h2>
+        <ul class="skills">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>Responsive Design</li>
+          <li>Version Control (Git)</li>
+        </ul>
+        <button id="skill-button">Add Skill</button>
+      </div>
+    </div>
+
+    <script src="./js/index.js"></script>
+  </body>
 </html>
-
-
-
