js added,Async cod

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>rahul munde</h1>
         <div class="contact-info">
           <p>Email: rahul.nuu@example.com | Phone: (123) 456-7890</p>
-          <p>Address: 123 Main St, Anytown, USA</p>
+          <p>Address: 123 Main St, vainly Rd, USA</p>
         </div>
       </div>
 
@@ -73,6 +73,24 @@
         <button id="skill-button">Add Skill</button>
       </div>
     </div>
+
+    <section>
+      <h2>Form Here</h2>
+      <form id="leave_message">
+        <label for="userName"> Name: </label></br>
+        <input type="text" name="userName" required /></br>
+        <label for="email">Email</label></br>
+        <input type="email" name="email" required /></br>
+        <label for="usersMessage">Message:</label></br>
+        <textArea type="text" name="usersMessage" required ></textArea></br>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+    <section id="messages">
+      <h2>Messages</h2>
+      <ul id="messages_list"></ul>
+    </section>
 
     <script src="./js/index.js"></script>
   </body>
