--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
       </div>
     </div>
 
+    <h1>My Projects</h1>
+    <section id="projectSection">
+      <ul></ul>
+    </section>
+
     <section>
       <h2>Form Here</h2>
       <form id="leave_message">
